# PopSyn_Monash

./: .dockerignore  .gitignore  BN.py  Dockerfile  IPF.py  Joint_dist_result_IPF.csv  README.md  RL.py  RL_results.txt  RL_results_clean_7.txt  RL_results_last.txt  checker.py  docker-compose.yml  gpu_test.py  job.script  job_ipsf.script  job_saa.script  job_saa.slurm  main.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: ruff.yml
IO/configs/: configs_full.yml  configs_small.yml  extra_runs.yml  runs.yml  test.yml
PopSynthesis/: Final_results_1_5.npy  main.py  plot.py
PopSynthesis/Analyse/: compare_hhtype.ipynb  compare_seed.ipynb  general_converge.ipynb  relationships_check.ipynb  sample_from_pool.ipynb
PopSynthesis/Benchmark/: EV.drawio  checker.py
PopSynthesis/Benchmark/CompareCensus/: compare.py  utils.py
PopSynthesis/Benchmark/CompareFullPop/: compare.py  utils.py
PopSynthesis/Benchmark/legacy/: actual.csv  checker.py
PopSynthesis/Benchmark/plotland/: aitpm_conf.drawio  draft_idea_EV.drawio  main.py  test.py
PopSynthesis/DataProcessor/: DataProcessor.py
PopSynthesis/DataProcessor/utils/: analyse_seed.ipynb  const.py  const_files.py  const_process.py  general_utils.py
PopSynthesis/Generator_data/: combine.py  create_LGA_PopSim.py  see_vista_count.ipynb  test.py  vista_count.py
PopSynthesis/Generator_data/generate_PSim_input/: checking.py  create_LGA_PopSim.py  create_PopSim_input.py  more_test_2020_data.py  paras.py  test.py
PopSynthesis/Generator_data/generate_combine_census/: README.md  get_first_meta.ipynb  meta_data_hh_manual.csv  meta_data_pp_manual.csv  process_match_ipu.ipynb  process_meta_data.ipynb  utils.py
PopSynthesis/Generator_data/script/: combine_spatia.ipynb  generate_for_fullpop.py  legacy_code_generate.py
PopSynthesis/Methods/: Progress_review.drawio
PopSynthesis/Methods/BN/: BN.py  Untitled Diagram.drawio
PopSynthesis/Methods/CSP/: CSP_tree.drawio  const.py  main.py  run.py
PopSynthesis/Methods/CTGAN/: run_ctgan_simple.ipynb
PopSynthesis/Methods/Copula/: new_test.ipynb
PopSynthesis/Methods/GAN/: run_ctgan_simple.ipynb  wgan.py
PopSynthesis/Methods/GNN_activity/: create_mock_data.ipynb  graph_construct.py  graph_construction.ipynb  infer_gnn.ipynb  model.py  train_gnn.ipynb  utils.py
PopSynthesis/Methods/GNN_pp/: test.py
PopSynthesis/Methods/GNN_syn/: create_mock.py  graph.py  model.py  run.py  visualise_graph.py
PopSynthesis/analyse/: relationships_check.ipynb
PopSynthesis/cli/: main.py
PopSynthesis/tests/: polars_testing.ipynb  test_graphs.ipynb
general_drawio/: ABM_example.drawio  BEAM.drawio  EV_question.drawio  GeneralABM.drawio  PRISMA_Review_POPSYN.drawio  Pools structure.drawio  Progress_review.drawio  SAA_updated.drawio  Untitled Diagram.drawio  WholeSysTest.drawio  activity_gen.drawio  examples_marg_rm_saa.drawio  venn.drawio
simple_BN_learn/: ABM_example.drawio  AusRain.ipynb  BEAM.drawio  GeneralABM.drawio  Researchaimtask.drawio  Untitled Diagram.drawio  WholeSysTest.drawio  bnlearn_practice.ipynb  practice.ipynb  researchaim.drawio  weatherAUS.csv
(+197 files in other folders)
