[project]
name = "PopSynthesis"
version = "0.1.0"
description = "Monash PopSyn"
requires-python = ">=3.9"
dependencies = [
    "synthpop @ git+https://github.com/bobkatla/synthpop",
    "click",
    "pandas",
    "polars",
    "geopandas",
    "matplotlib",
    "numpy",
    "pgmpy",
    "pomegranate",
    "scikit-learn",
    "scipy",
    "ipfn",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

